--- a/noel2025/css/noel.css
+++ b/noel2025/css/noel.css
@@ -17,7 +17,8 @@ body{
     /*background:radial-gradient(circle,rgb(255, 255, 255) , rgb(255, 0, 0));*/
     background-image: url("../image/fond2.jpg");
     background-size: cover;        /* L’image couvre tout l’écran */
-    background-repeat: no-repeat;  /* Pas de répétition */
+    background-repeat: repeat;  /* répétition */
     background-position: center;   /* Centrée */
 
 }
+
