--- a/noel2025/css/noel.css
+++ b/noel2025/css/noel.css
@@ -16,6 +16,15 @@
 body{
     background:radial-gradient(circle,rgba(227, 77, 77, 0.621) , rgb(255, 0, 0));
     
-} /*background-size: cover;        /* L’image couvre tout l’écran */
+} 
+@media(max-width:600px){
+     img{
+         height:70%;
+         width:70%;
+     }
+}
+
+/*background-size: cover;        /* L’image couvre tout l’écran */
    /* background-repeat: repeat;  /* répétition */
    /* background-position: center;   /* Centrée */
+
